--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ numpy==1.24.3
 requests==2.31.0
 torch==2.0.1
 transformers==4.30.2
+faster-whisper==0.10.0
+pyttsx3==2.90
+pyaudio==0.2.11
+sounddevice==0.4.6
+scipy==1.11.1
